--- a/GithubPlanningPoker/GithubPlanningPoker.csproj
+++ b/GithubPlanningPoker/GithubPlanningPoker.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{002623E3-9384-48BE-A39A-188854AB276D}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>GithubPlanningPoker</RootNamespace>
     <AssemblyName>GithubPlanningPoker</AssemblyName>
@@ -31,6 +31,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Octokit">
       <HintPath>..\packages\Octokit.0.4.1\lib\net45\Octokit.dll</HintPath>
@@ -46,7 +49,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GithubIssues.cs" />
-    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
