--- a/GithubPlanningPoker/GithubPlanningPoker.csproj
+++ b/GithubPlanningPoker/GithubPlanningPoker.csproj
@@ -55,6 +55,12 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DeadDog\DeadDog.csproj">
+      <Project>{675ab5e0-4637-4e6c-8d38-aa7bb135b5ce}</Project>
+      <Name>DeadDog</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
