--- a/GithubPlanningPoker/GithubPlanningPoker.csproj
+++ b/GithubPlanningPoker/GithubPlanningPoker.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GithubIssues.cs" />
+    <Compile Include="Id.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
